--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
       "php-http/client-common": "^1.0",
       "php-http/discovery": "^1.0",
       "php-http/message": "^1.0",
-      "php-http/guzzle6-adapter": "^1.0",
+      "php-http/guzzle6-adapter": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0",
